updated page and style, added datetimescript

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stast Page</title>
+    <title>Start Page</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row1">
+        <h1>Hello, Herbatka!</h1>
+        <p id="time"></p>
+        <p id="date"></p>
+      </div>
+      <div class="row2">
         <div class="section">
           <ul>
             <li><h3 class="header">Entertainment</h3></li>
@@ -32,15 +38,13 @@
         </div>
         <div class="section">
           <ul>
-            <li><h3 class="header">WTF?</h3></li>
+            <li><h3 class="header">Other</h3></li>
             <li><a href="https://chat.openai.com/">Chat-GPT</a></li>
             <li><a href="https://app.raindrop.io/">Raindrop</a></li>
             <li><a href="https://my.1password.com/">1Password</a></li>
             <li><a href="https://www.notion.so/">Notion</a></li>
           </ul>
         </div>
-      </div>
-      <div class="row">
         <div class="section">
           <ul>
             <li><h3 class="header">Google</h3></li>
@@ -62,7 +66,13 @@
             <li><a href="https://www.keybr.com/">Keybr</a></li>
           </ul>
         </div>
-        <div class="section"></div>
+        <div class="section">
+          <ul>
+            <li><h3 class="header">Shopping</h3></li>
+            <li><a href="https://allegro.pl/">Allegro</a></li>
+            <li><a href="https://www.x-kom.pl/">X-kom</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
